--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,8 +11,8 @@ plugins {
     }
 
 android {
-    namespace = "com.devakash.book_bridge"
-    compileSdk = flutter.compileSdkVersion
+    namespace = "com.devakash.bookbridge"
+    compileSdk = 35
     //ndkVersion = flutter.ndkVersion
     ndkVersion = "25.1.8937393"
     compileOptions {
@@ -26,7 +26,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.devakash.book_bridge"
+        applicationId = "com.devakash.bookbridge"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         
