--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: book_bridge
+name: bookbridge
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   syncfusion_flutter_pdf: ^28.2.11
   permission_handler: 11.3.1
-  device_info_plus: 11.2.0
+  device_info_plus: 11.3.0
   path: 1.9.0
   file_picker: 8.1.6 
   # The following adds the Cupertino Icons font to your application.
